Composer classmap add

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
     "minimum-stability": "dev",
     "require": {},
     "autoload": {
-        "psr-0": { "Rhino": "src/" }
+        "psr-0": {
+        	"Rhino": "src/"
+        },
+        "classmap": [
+            "./Module.php"
+        ]
     }
 }
