--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "root/rhino",
+    "name": "rhino/rhino",
     "description": "Zend Frameork Module",
     "license": "MIT",
     "authors": [
